// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FatherSonComponent debe hacer match con el snapshot 1`] = `
<div
  id="root1"
>
  <h5>
    Hijo
  </h5>
  <code>
     
  </code>
  
  
</div>
`;

exports[`FatherSonComponent si hay cliente hacer match con el snapshot 1`] = `
<div
  id="root4"
>
  <h5>
    Hijo
  </h5>
  <code>
     
  </code>
  
  
</div>
`;
